fix: Fixed flex wrapping and search func

--- a/client/app/(letterbookd)/books/books.css
+++ b/client/app/(letterbookd)/books/books.css
@@ -35,7 +35,8 @@
 .books-list-container {
 	display: flex;
 	flex-direction: row;
-	align-content: flex-start;
+	align-content: space-around;
+	flex-wrap: wrap;
 	gap: 1rem;
 }
 
